fixed scrolling at search container changed styling of scrollbar

--- a/chatterix-slackclone/src/app/components/chatroom/chatroom.component.scss
+++ b/chatterix-slackclone/src/app/components/chatroom/chatroom.component.scss
@@ -45,7 +45,7 @@
     }
 
     .chatroom-content {
-        padding:0rem 1.5rem 1.5rem 1.5rem;
+        padding:0 0 1.5rem 1.5rem;
         height: calc(100svh - 165px);
         background-color: #222529;
 
