--- a/chatterix-slackclone/src/app/components/home/home.component.scss
+++ b/chatterix-slackclone/src/app/components/home/home.component.scss
@@ -1,15 +1,17 @@
+
 .drawer-container {
     height: 100vh;
     border: 1px solid rgba(0, 0, 0, 0.5);
     background-color: #222529;
-    ;
 
     .drawer-sidenav {
         width: 300px;
         // background-color: #2f41a5;
         background-color: #303E4D;
+
         @media (max-width: 820px) {
-            width: 250px;;
+            width: 250px;
+            ;
         }
     }
 
